{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "c0030f46-a118-411a-b3e7-be754bb5646d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d54ab224-08a3-486e-ba29-247413c87261",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookMove",
                    "type": "Value",
                    "id": "506899d4-4274-4ad9-9a79-17f79bbf2e76",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "29e5238b-e556-4ac3-b962-b001d26e27db",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RestartPlayer",
                    "type": "Button",
                    "id": "5b10c327-2a8e-48d7-b846-b1accb38a483",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RestartLevel",
                    "type": "Button",
                    "id": "b019783e-d590-405c-8bc9-3ab3c1bf4f4d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open/Close UI",
                    "type": "Button",
                    "id": "3637162f-3039-468b-b8d2-f9962910cca8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenSwipeSecond",
                    "type": "PassThrough",
                    "id": "7799f11d-a317-4f61-b910-c7b8ddc9ba81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenSwipePrimary",
                    "type": "Value",
                    "id": "82f371ad-80d1-44b4-a929-71f36f2e4638",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "96993a23-e846-40d1-9d22-8abd546ee275",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73f0f34d-692e-496f-b4bc-0285f3b55455",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90707cd7-b532-4922-aa1b-66518f3818c7",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "RestartPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "469db20a-a197-4280-b869-11b39032ff32",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "RestartPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fa70d19-2fea-4b72-80fb-7f93191c9de7",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "RestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bcfa0192-9676-4a32-a517-19c6840958bd",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "RestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "062b28a8-d93a-4377-b3cb-9c61bf278433",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Open/Close UI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "156b8e69-8de3-404a-9e9f-1fb2546524a6",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Open/Close UI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "6c69db81-2520-451c-8ae7-db30d762042b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "21fa9635-ca56-4ad9-b97f-29fc2f74fec4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "96872d29-755c-41fd-ad3c-250bf20022a8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3739f43d-986d-4e7f-8938-05be8858ecbb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9b33ade9-f749-4ef3-a426-963c60264053",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "06b67973-41ec-4187-b02e-684bfba56d1e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ba5b4ddd-a4e9-4987-ba76-a1a66331c30a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2ec8cb18-0dc1-494b-bba8-9d6dd040a600",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8eabedd5-3d68-4f6d-b5b0-8d4d6588f80c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b2c7cb10-7d83-4dd7-8774-63235963887a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5ddeb291-6afe-46d1-aaf0-755f62b71ecd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa153d0c-7b45-4b60-b7f2-d750bf72a35f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "LookMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67a0371e-6bbb-414a-a42f-cf749788e7ce",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "LookMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f94b1b6a-2b29-4966-91cc-c81845e7d7de",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenSwipeSecond",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "783f4327-73cc-4fde-a33d-c9bac173acd2",
                    "path": "<Touchscreen>/delta",
                    "interactions": "Hold(pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenSwipePrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}